# alinalib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  testfile.c
include/: alinalib.h
src/: alinalib.c  graphic.c  input.c  text.c  time.c  window.c
